Fixed smaller screen cutoff

--- a/frontend/src/shared/ListenerIcons.module.css
+++ b/frontend/src/shared/ListenerIcons.module.css
@@ -13,3 +13,10 @@
 	-webkit-user-drag: none;
 	-webkit-user-select: none;
 }
+
+@media only screen and (max-width: 800px), (max-height: 600px) {
+	.listenerImage {
+		height: 25px;
+		width: 25px;
+	}
+}
