--- a/frontend/src/studio/StudioPage.module.css
+++ b/frontend/src/studio/StudioPage.module.css
@@ -36,7 +36,7 @@
 	grid-row: 1 / 1;
 	grid-column: 1 / 3;
 	border-radius: 10px;
-	min-height: 40px;
+	min-height: 50px;
 	overflow: hidden;
 	height: auto;
 	position: relative;
@@ -202,9 +202,10 @@
 	opacity: 50%;
 }
 
-@media only screen and (max-width: 800px) or (max-height: 600px) {
+@media only screen and (max-width: 800px), (max-height: 600px) {
 	.bannerStudioName {
 		font-size: 20px;
+		transform: translateX(10px);
 	}
 
 	.kebabIcon {
@@ -212,7 +213,7 @@
 	}
 
 	.bannerlisteners {
-		transform: scale(0.9);
+		transform: translateX(-25px);
 	}
 }
 
